Fixing some overlapping issues

--- a/src/app/components/voting/voting.component.scss
+++ b/src/app/components/voting/voting.component.scss
@@ -5,7 +5,7 @@
   width: 40px;
   min-height: 100px;
   top: -15px;
-  z-index: 10;
+  z-index: 2;
 
   .text-wrapper {
     overflow: visible;
@@ -40,16 +40,16 @@
     overflow: visible;
 
     .text-wrapper {
-      height: 40px;
+      margin-top: -20px;
     }
 
     .heart {
       height: 60px;
       width: 60px;
-      margin-top: -30px;
+      margin-top: -20px;
       margin-left: -10px;
       overflow: visible;
-      z-index: 11;
+      z-index: 3;
 
       background-image: url('/assets/sprites/heart.png');
       background-position: left;
